# esdk_Cgw

./: README.md  log
open_src/tinyxml/lib/: tinyxml.lib
open_src/tinyxml/tinyxml/: Makefile  version.txt
platform/IVS/IVS_COMMON/: Clean_for_CI.bat
platform/IVS/IVS_COMMON/inc/: hwsdk.h  ivs_error.h  nss_mt.h
platform/minisip/include/: ssincludeall.h
platform/minisip/include/sipheaders/: sdpapi.h  sdpattr.h  sdpenums.h  sdpfmtp.h  sdpstructure.h  sdptypes.h  sigcomp.x  sscbbtypes.x  sscodec.x  sscorelib.x  ssdatatype.h  ssdsmapi.x  ssdsmmsgcloneutil.x  ssdsmmsgutil.x  ssdsmunknownhdrs.x  ssdsmutil.h  ssenums.h  ssenvdep.h  ssfrmreg.x  sshdrallow.h  sshdrauthinfo.h  sshdrauthrzclass.h  sshdrcntnttypeclass.h  sshdrdate.h  sshdrevntclass.h  sshdrgenparamslistclass.h  sshdrmimever.h  sshdrnumclass.h  sshdrprivacy.h  sshdrpxyauthenclass.h  sshdrrack.h  sshdrretryafterclass.h  sshdrserverclass.h  sshdrstringclass.h  sshdrstringgenparamsclass.h  sshdrtokenclass.h  sshdrtokengenparamsclass.h  sshdrurihdrclass.h  ssheaders.h  ssinclude.h  (+27 more)
platform/minisip/lib/: cbb.lib  coresip.lib  sipext.lib  sipsdp.lib
self_dev/Cgw/eSDK_IVS_API_V1.5.00_Windows/: License Information.docx
self_dev/Cgw/eSDK_IVS_API_V1.5.00_Windows/include/: hwsdk.h
self_dev/Cgw/eSDK_IVS_API_V1.5.00_Windows/sdklib/: IVS_SDK.lib
self_dev/eSDKClientLogAPI/include/: eSDKLogAPI.h  eSDKLogDataType.h
self_dev/eSDKClientLogAPI/release/: eSDKLogAPI.lib
self_dev/eSDK_eLTE_SDK/debug/eLTE_NativeService/: InstallService.bat  UninstallService.bat  audio-config.ini  dcconf.ini  eLTE_NativeService.ini  eSDKClientLogCfg.ini  lang.ini
self_dev/eSDK_eLTE_SDK/debug/eLTE_NativeService/conf/: CMakeLists.txt  cdr_trace.ini  cpu_alloc_policy.xml  cpu_alloc_policy.xsd  deploy_policy.xml  deploy_policy.xsd  ftpsclient.xml  log_cdr_backup.ini  my.cnf  rtcp_trace.ini  tomcat.keystore  trustWNR.jks  ubp_db_cfgdata.xml  ubp_error.xml  ubp_frm_moduledef.xml  ubp_mq.cnf  ubp_trace_config.xml  ubp_ver_d.ini  ubp_ver_r.ini  ubp_version.ini  vsftpd.pem
self_dev/eSDK_eLTE_SDK/debug/eLTE_NativeService/conf/cm_service/: AASCfg.xml  AASSession.xml  BCCInfo.xml  BccCfg.xml  BccNeighborNode.xml  BccNode.xml  BccRange.xml  CallForward.xml  CallInhibited.xml  CallRecTaskInfo.xml  DCAttribute.xml  DCDec.xml  DCRanges.xml  DMGPhotoGroupUser.xml  DecUser.xml  DefaultGISCFG.xml  DiamLink.xml  DiamLinkSet.xml  DiamLocalHost.xml  DiamPeerHost.xml  DynamicGroup.xml  DynamicGroupMember.xml  EmencyGroupMember.xml  ExternalGroup.xml  FixedUser.xml  GISCFG.xml  GISIPC.xml  GISSubRecord.xml  GWVPN.xml  GroupFixedUser.xml  GroupPTTUser.xml  Groups.xml  HOTLINECFG.xml  IPWhite.xml  IpcDevice.xml  IpcMgrState.xml  IpcRecQuery.xml  IpcRecTaskInfo.xml  LoginInfo.xml  MQUser.xml  (+60 more)
self_dev/eSDK_eLTE_SDK/debug/eLTE_NativeService/conf/cm_service/en/: AASCfg.xml  AASSession.xml  BCCInfo.xml  BccCfg.xml  BccNeighborNode.xml  BccNode.xml  BccRange.xml  CallForward.xml  CallInhibited.xml  CallRecTaskInfo.xml  DCAttribute.xml  DCDec.xml  DCRanges.xml  DMGPhotoGroupUser.xml  DecUser.xml  DefaultGISCFG.xml  DiamLink.xml  DiamLinkSet.xml  DiamLocalHost.xml  DiamPeerHost.xml  DynamicGroup.xml  DynamicGroupMember.xml  EmencyGroupMember.xml  ExternalGroup.xml  FixedUser.xml  GISCFG.xml  GISIPC.xml  GISSubRecord.xml  GWVPN.xml  GroupFixedUser.xml  GroupPTTUser.xml  Groups.xml  HOTLINECFG.xml  IPWhite.xml  IpcDevice.xml  IpcMgrState.xml  IpcRecQuery.xml  IpcRecTaskInfo.xml  LoginInfo.xml  MQUser.xml  (+59 more)
self_dev/eSDK_eLTE_SDK/debug/eLTE_NativeService/conf/dc/: deploy_policy.xml  ubp_mq.cnf
self_dev/eSDK_eLTE_SDK/debug/eLTE_NativeService/conf/error/: error_number.xsd  ubp_error.xml  ubp_error_bcc.xml  ubp_error_bcc_zh.xml  ubp_error_bdc.xml  ubp_error_bdc_zh.xml  ubp_error_dc_zh.xml  ubp_error_mrs.xml  ubp_error_mrs_zh.xml  ubp_error_platform.xml  ubp_error_platform_zh.xml  ubp_error_zh.xml
self_dev/eSDK_eLTE_SDK/debug/eLTE_SDK/: eLTE_SDK.ini  eLTE_SDK.lib
self_dev/eSDK_eLTE_SDK/include/: eLTE_SDK.h  eLTE_Types.h
self_dev/eSDK_eLTE_SDK/release/eLTE_SDK/: eLTE_SDK.lib
source/Cgw/: CopyDLL.bat  Release_全量编译全部 .bat
source/Cgw/Cgw/: Cgw.sln  Cgw.vsmdi
source/Cgw/Cgw/Cgw.Channel/: Cgw.Channel.csproj  MonitorChannel.cs  MonitorChannelManager.cs  MonitorChannelRelation.cs  MonitorChannelRelationManager.cs
source/Cgw/Cgw/Cgw.Common/: Camera.cs  CameraGroup.cs  Cgw.Common.csproj  CgwConst.cs  ChannelInfo.cs  CommonFunction.cs  ConfigSettings.cs  EnumType.cs  FileOperation.cs  MediaDataSender.cs  MonitorServiceControl.cs  MonitorSettings.cs  NodeRelation.cs  PageInfo.cs  PagesParam.cs  PlatformLicenseInfo.cs  PtzCommandType.cs  ServiceInit.cs  VideoData.cs  VideoPipe.cs  VideoPipeManage.cs  WinServiceInit.cs
source/Cgw/Cgw/Cgw.MonitorManageAdapter/: Cgw.MonitorManageAdapter.cs  Cgw.MonitorManageAdapter.csproj  app.config
source/Cgw/Cgw/Cgw.NlogEx/: Cgw.NlogEx.csproj  LoggerEx.cs  NLog.config
source/Cgw/Cgw/Cgw.Service/: App.config  Cgw.Service.csproj  CgwConfig.xml  CgwInstall.Designer.cs  CgwInstall.cs  CgwService.cs  CgwSession.cs  (+6 more)
source/Cgw/CgwMonitorManageService/: CgwMonitorManage.sln
source/SipSDK/: output.txt  一键打包.bat
source/SipSDK/eSDK_RtpPacket/: Common_Def.h  Es2PsProcessor.cpp  Es2PsProcessor.h  HstPESParse.cpp  HstPESParse.h  Lock.h  Log.h  MediaBlockBuffer.cpp  MediaBlockBuffer.h  MediaDataQueue.cpp  MediaDataQueue.h  NssMedia.h  PacketProcessMgr.cpp  PacketProcessMgr.h  Ps2EsProcessor.cpp  Ps2EsProcessor.h  ReadMe.txt  RtpFrameOrganizer.cpp  RtpFrameOrganizer.h  RtpPacket.cpp  RtpPacket.h  dllmain.cpp  eSDKMem.cpp  eSDKMem.h  eSDKTool.cpp  eSDKTool.h  eSDK_ProcessorMgr.h  eSDK_RtpPacket.cpp  eSDK_RtpPacket.h  eSDK_RtpPacket.vcxproj  eSDK_RtpPacket.vcxproj.filters  nss_df_c02.h  stdafx.cpp  stdafx.h
source/SipSDK/include/: log4cpp.h
source/SipSDK/sipsdk/: DataType.h  Log.h  ReadMe.txt  UnhandledExceptionFilter.cpp  UnhandledExceptionFilter.h  dllmain.cpp  eSDKTool.cpp  eSDKTool.h  minidmp.cpp  minidmp.h  sipsdk.cpp  sipsdk.h  sipsdk.vcxproj  sipsdk.vcxproj.filters  stdafx.cpp  stdafx.h
source/SipSDK/version/: SIP_SDK_2015-10-16-20-03.rar
(+516 files in other folders)
