##############################################################################
#Copyright 2012,TD-Tech. Co., Ltd.
#Filename: CMakeList.txt for conf
#Author:    XiaoLongguang
#Created:  2012/1/10 14:56
#Description: 
##############################################################################


##############################################################################
#                                    INSTALL                                 #
##############################################################################
INSTALL(FILES deploy_policy.xml DESTINATION conf)
INSTALL(FILES deploy_policy.xsd DESTINATION conf)
INSTALL(FILES cpu_alloc_policy.xml DESTINATION conf)
INSTALL(FILES cpu_alloc_policy.xsd DESTINATION conf)
INSTALL(FILES ubp_trace_config.xml DESTINATION conf)
INSTALL(FILES ubp_db_cfgdata.xml DESTINATION conf)
INSTALL(FILES ubp_frm_moduledef.xml DESTINATION conf)
INSTALL(FILES ubp_version.ini DESTINATION conf)
INSTALL(FILES my.cnf DESTINATION conf)
install(FILES ftpsclient.xml DESTINATION conf)
INSTALL(FILES error/error_number.xsd DESTINATION conf/error)
#INSTALL(FILES nvrd/deploy_policy.xml DESTINATION conf/nvrd)

INSTALL(FILES cm_service/BccCfg.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/BCCInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/BccNode.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/BccNeighborNode.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/BccRange.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/CallForward.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/CallInhibited.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/CallRecTaskInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DCAttribute.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/TerminalLinkageCFG.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DCDec.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DCRanges.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DecUser.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DefaultGISCFG.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DMGPhotoGroupUser.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DynamicGroupMember.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DynamicGroup.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/ExternalGroup.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/FixedUser.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/GISCFG.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/GISIPC.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/GroupFixedUser.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/GroupPTTUser.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/Groups.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/GWVPN.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/HOTLINECFG.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/IpcDevice.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/IpcRecQuery.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/IpcRecTaskInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSFileInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSNode.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MrsRange.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSRecRangeList.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSSipRecScheduleTask.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSVPN.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/OneStepMsgUpload.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/PTTUser.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/RangeList.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/RecFileInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/RecFile.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/RecPremptedInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/RecPttInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/RecRangeList.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/RecSipInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/ScheduleRecTask.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SDSCFG.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SipCallRecQuery.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SipGroupCallRecQuery.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/STMSGCFG.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UBPNode.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UBPService.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UEAbility.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UEAbilityNew.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UECfgState.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UEGISCFG.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UserPlaneGlobalPara.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/UserRegisterInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/VgwDec.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/VgwIpc.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/VideoCodecPara.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/VPNRange.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/VPN.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/OneStepVideoUpLoad.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MrsServicePort.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSStorageResource.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSBackupMode.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSStorageThreshold.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSIVSIpcDevice.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSIVSServiceInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/GISSubRecord.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/PatchGroup.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/PatchGroupMember.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DiamLocalHost.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DiamPeerHost.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DiamLinkSet.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/DiamLink.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/QosTemplet.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/QosVOIPTemplet.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/EmencyGroupMember.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/OMCIpcDevice.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/View_IpcDevice.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/IpcMgrState.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/PSTNRange.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SIPServerRange.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SDKGWRange.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/PLMNGW.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/TetraGW.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SIPServer.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SDKGW.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/PSTNGW.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSESDKIVSInfo.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MRSIVSIpcDeviceV2.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/IPWhite.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/MQUser.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/OutNumberRule.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/SecPolicy.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/web_admin.xml DESTINATION conf/cm_service)

INSTALL(FILES cm_service/AASCfg.xml DESTINATION conf/cm_service)
INSTALL(FILES cm_service/AASSession.xml DESTINATION conf/cm_service)

INSTALL(FILES cdr_trace.ini DESTINATION conf)
INSTALL(FILES rtcp_trace.ini DESTINATION conf)
INSTALL(FILES log_cdr_backup.ini DESTINATION conf)
INSTALL(FILES vsftpd.pem DESTINATION conf)
INSTALL(FILES tomcat.keystore DESTINATION conf)
INSTALL(FILES trustWNR.jks DESTINATION conf)

if(EAPP_DEVELOP)
    install(FILES ubp_ver_d.ini DESTINATION conf)
else(EAPP_DEVELOP)
    install(FILES ubp_ver_r.ini DESTINATION conf)
endif(EAPP_DEVELOP)
